--- a/WCSTrainer/Pages/TrainingOrders/Verification.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Verification.cshtml
@@ -27,6 +27,8 @@
                      <input asp-for="TrainingOrder.Priority" hidden />
                      <input asp-for="TrainingOrder.LessonId" type="hidden" />
                      <input asp-for="TrainingOrder.ClosingNotes" hidden />
+                     <input asp-for="TrainingOrder.ClosingSignature" hidden />
+                     <input asp-for="TrainingOrder.Certificate" hidden />
 
                      <input asp-for="TrainingOrder.ParentSkillId" hidden />
                      <input asp-for="TrainingOrder.TraineeId" hidden />
