--- a/WCSTrainer/Pages/TrainingOrders/Conclude.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Conclude.cshtml
@@ -53,6 +53,14 @@
                            <div class="form-group">
                               <div class="form">
                                  <div class="labels">
+                                    <p class="control-label">Certification Link (Example: D:/Documents/Certificate_Name.pdf)</p>
+                                 </div>
+                                 <input asp-for="TrainingOrder.Certificate" class="form-control" />
+                              </div>
+                           </div>
+                           <div class="form-group">
+                              <div class="form">
+                                 <div class="labels">
                                     <p class="control-label">Signature</p>
                                  </div>
                                  <input asp-for="TrainingOrder.ClosingSignature" class="form-control" />
