--- a/WCSTrainer/Pages/Shared/RazorComponents/TrainingDetails.razor
+++ b/WCSTrainer/Pages/Shared/RazorComponents/TrainingDetails.razor
@@ -199,12 +199,12 @@
                      <table>
                         <tbody>
                            <tr>
-                              <td class="label">Signed By</td>
-                              <td class="text">@TrainingOrder.Verification.Signature</td>
+                              <td class="label">Training Understood?</td>
+                              <td class="text">@TrainingOrder.Verification.VerifyNotes</td>
                            </tr>
                            <tr>
-                              <td class="label">Effectiveness</td>
-                              <td class="text">@TrainingOrder.Verification.VerifyNotes</td>
+                              <td class="label">Signed By</td>
+                              <td class="text">@TrainingOrder.Verification.Signature</td>
                            </tr>
                         </tbody>
                      </table>
