--- a/WCSTrainer/Pages/Skills/Create.cshtml
+++ b/WCSTrainer/Pages/Skills/Create.cshtml
@@ -31,9 +31,11 @@
                      <div class="form">
                         <div class="multi-select-wrapper">
                            <p class="label">Lesson</p>
-                           <select asp-for="SelectedLessonList" multiple class="multi-select-comp" size="@Model.Lessons.Count()">
-                              @foreach (var lesson in Model.Lessons) {
-                                 <option value="@lesson.Id">@lesson.Name</option>
+                           <select asp-for="SelectedLessonList" multiple class="multi-select-comp" size="@Model.LessonCategories.Count()">
+                              @foreach (var category in Model.LessonCategories) {
+                                 @foreach (var lesson in category.Lessons) {
+                                    <option value="@lesson.Id">@category.Name - @lesson.Name</option>
+                                 }
                               }
                            </select>
                         </div>
