New Help Section

--- a/WCSTrainer/Pages/Lessons/Index.cshtml
+++ b/WCSTrainer/Pages/Lessons/Index.cshtml
@@ -59,8 +59,8 @@
                   <input class="search-box" id="searchInput" placeholder="Search Lessons" type="search" oninput="update(this, 'searchable2')" />
                </div>
                <div class="btns">
-                  <a asp-page="Create" class="btn nbg-btn btnMenu">Create Lesson</a>
-                  <a asp-page="./Category/Create" class="btn nbg-btn btnMenu">Create Category</a>
+                  <a asp-page="Create" class="btn btnMenu">Create Lesson</a>
+                  <a asp-page="./Category/Create" class="btn btnMenu">Create Category</a>
                </div>
             </div>
          </div>
