--- a/WCSTrainer/Pages/Locations/Index.cshtml
+++ b/WCSTrainer/Pages/Locations/Index.cshtml
@@ -61,8 +61,8 @@
                   <input class="search-box" id="searchInput" placeholder="Search Locations" type="search" oninput="update(this, 'searchable2')" />
                </div>
                <div class="btns">
-                  <a asp-page="Create" class="btn nbg-btn btnMenu">Create Location</a>
-                  <a asp-page="CreateCategory" class="btn nbg-btn btnMenu">Create Category</a>
+                  <a asp-page="Create" class="btn btnMenu">Create Location</a>
+                  <a asp-page="CreateCategory" class="btn btnMenu">Create Category</a>
                </div>
             </div>
          </div>
