--- a/WCSTrainer/Pages/Shared/_Layout.cshtml
+++ b/WCSTrainer/Pages/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
                   <li><a class="main-title">WCS Trainer 1.0.0</a></li>
                   <li><a asp-page="/Index" class="clickable">Home</a></li>
                   <li><a asp-page="/TrainingOrders/Index" class="clickable">My Panel</a></li>
+                  <li><a asp-page="/Help/Index" class="clickable">Help</a></li>
                </ul>
             </div>
             <div class="nav-options">
