--- a/WCSTrainer/Pages/TrainerGroups/Index.cshtml
+++ b/WCSTrainer/Pages/TrainerGroups/Index.cshtml
@@ -25,7 +25,7 @@
                   <input class="search-box" id="searchInput" placeholder="Search Groups" type="search" oninput="update(this, 'searchable')" />
                </div>
                <div class="btns">
-                  <a asp-page="Create" class="btn nbg-btn btnMenu">Create Group</a>
+                  <a asp-page="Create" class="btn btnMenu">Create Group</a>
                </div>
             </div>
          </div>
