--- a/WCSTrainer/Pages/Shared/_Sidebar.cshtml
+++ b/WCSTrainer/Pages/Shared/_Sidebar.cshtml
@@ -1,4 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Http
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<UserAccount> SignInManager
+@inject UserManager<UserAccount> UserManager
 
 <script src="~/js/sidebar.js"></script>
 
@@ -14,23 +17,27 @@
       ("FileExplorer", "File Explorer", "3"),
    };
 }
-
-<div class="side-bar">
-   <div class="link-list">
-      <button id="condenser" onclick="toggleExpand()" class="condenser">⯇⯈</button>
-      @foreach (var link in links) {
-         var roleRequired = int.Parse(link.Item3);
-         if ((roleRequired <= 3 && User.IsInRole("admin")) ||
-         (roleRequired <= 3 && User.IsInRole("owner")) ||
-         (roleRequired <= 2 && User.IsInRole("user")) ||
-         (roleRequired == 1 && User.IsInRole("guest"))) {
-            var source = "/images/" + link.Item1 + ".svg";
-            <a href="/@link.Item1"
-               class="@(Context.Request.Path.ToString().Contains(link.Item1) ? "selected" : "") btn btnMenu condensable">
-               <img class="icon @(Context.Request.Path.ToString().Contains(link.Item1) ? "selected-img" : "")" src="@source" />
-               <p class="text">@link.Item2</p>
-            </a>
+@if (SignInManager.IsSignedIn(User)) {
+   <div class="side-bar">
+      <div class="link-list">
+         <button id="condenser" onclick="toggleExpand()" class="condenser">⯇⯈</button>
+         @foreach (var link in links)
+         {
+            var roleRequired = int.Parse(link.Item3);
+            if ((roleRequired <= 3 && User.IsInRole("admin")) ||
+            (roleRequired <= 3 && User.IsInRole("owner")) ||
+            (roleRequired <= 2 && User.IsInRole("user")) ||
+            (roleRequired == 1 && User.IsInRole("guest")))
+            {
+               var source = "/images/" + link.Item1 + ".svg";
+               <a href="/@link.Item1"
+                  class="@(Context.Request.Path.ToString().Contains(link.Item1) ? "selected" : "") btn btnMenu condensable">
+                  <img class="icon @(Context.Request.Path.ToString().Contains(link.Item1) ? "selected-img" : "")" src="@source" />
+                  <p class="text">@link.Item2</p>
+               </a>
+            }
          }
-      }
+      </div>
    </div>
-</div>
+}
+
