--- a/WCSTrainer/Pages/Locations/Index.cshtml
+++ b/WCSTrainer/Pages/Locations/Index.cshtml
@@ -62,7 +62,7 @@
                </div>
                <div class="btns">
                   <a asp-page="Create" class="btn btnMenu">Create Location</a>
-                  <a asp-page="CreateCategory" class="btn btnMenu">Create Category</a>
+                  <a asp-page="Category/Create" class="btn btnMenu">Create Category</a>
                </div>
             </div>
          </div>
