--- a/WCSTrainer/Pages/Shared/_Sidebar.cshtml
+++ b/WCSTrainer/Pages/Shared/_Sidebar.cshtml
@@ -9,26 +9,26 @@
    var links = new List<(string, string, string)> {
       ("TrainingOrders", "Training Orders", "1"),
       ("Skills", "Skills", "2"),
-      ("Lessons", "Lessons", "1"),
+      ("Lessons", "Lessons", "2"),
       ("TrainerGroups", "Trainer Groups", "2"),
       ("Locations", "Locations", "2"),
       ("Employees", "Employees", "3"),
       ("Accounts", "User Accounts", "3"),
       ("FileExplorer", "File Explorer", "3"),
+      ("Reports", "Reports", "3"),
    };
 }
+
 @if (SignInManager.IsSignedIn(User)) {
    <div class="side-bar">
       <div class="link-list">
          <button id="condenser" onclick="toggleExpand()" class="condenser">⯇⯈</button>
-         @foreach (var link in links)
-         {
+         @foreach (var link in links) {
             var roleRequired = int.Parse(link.Item3);
             if ((roleRequired <= 3 && User.IsInRole("admin")) ||
             (roleRequired <= 3 && User.IsInRole("owner")) ||
             (roleRequired <= 2 && User.IsInRole("user")) ||
-            (roleRequired == 1 && User.IsInRole("guest")))
-            {
+            (roleRequired == 1 && User.IsInRole("guest"))) {
                var source = "/images/" + link.Item1 + ".svg";
                <a href="/@link.Item1"
                   class="@(Context.Request.Path.ToString().Contains(link.Item1) ? "selected" : "") btn btnMenu condensable">
