--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -2027,3 +2027,28 @@ nav {
 
 .theme-input:checked + .slider {
 }
+
+.lesson-pill {
+   background-color: var(--black);
+   display: flex;
+   height: 100%;
+   justify-content: space-between;
+}
+   .lesson-pill .left {
+      display: flex;
+      flex-direction: column;
+      padding: 5px;
+      padding-left: 10px;
+   }
+   .lesson-pill .lesson-title {
+      font-weight: bold;
+   }
+   .lesson-pill .lesson-subtitle {
+      color: var(--textSub1);
+   }
+   .lesson-pill .right {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      padding: 10px;
+   }
